--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "expo": "~36.0.0",
+    "immer": "^5.3.5",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -20,13 +21,17 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
     "react-navigation-header-buttons": "^3.0.5",
-    "react-navigation-stack": "^2.1.1"
+    "react-navigation-stack": "^2.1.1",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "~8.0.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "redux-devtools-extension": "^2.13.8"
   },
   "private": true
 }
