--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "expo": "~36.0.0",
+    "expo-file-system": "^8.0.0",
+    "expo-image-picker": "^8.0.2",
+    "expo-permissions": "^8.0.0",
+    "expo-sqlite": "^8.0.0",
     "immer": "^5.3.5",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
