--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
+    "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-file-system": "^8.0.0",
     "expo-image-picker": "^8.0.2",
+    "expo-location": "^8.0.0",
     "expo-permissions": "^8.0.0",
     "expo-sqlite": "^8.0.0",
     "immer": "^5.3.5",
@@ -19,6 +21,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
